fix/ exp list text truncate solved

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -1649,7 +1649,7 @@ body:not(.login-page) {
     .latest-cases-container {
       min-height: 100%;
     }
-  }
+  
 
   // LATEST STUDY CASES
   .latest-study-case {
@@ -1828,12 +1828,33 @@ body:not(.login-page) {
     }
   }
 }
+}
 
 // HOME-TEACHERACADEMY END //
 
 
 // --- EXPERIENCES START --- //
 // EXPERIENCES DASHBOARD START //
+#page-local-dta-pages-experiences-dashboard {
+  .experience-card-title {
+    color: $primarycolor !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .experience-description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-wrap: wrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    line-clamp: 5;
+    -webkit-box-orient: vertical;
+  }
+}
+
+
+
 .experience-card,  
 #page-local-dta-pages-experiences-dashboard,
 #page-local-dta-pages-experiences-view {
